--- a/conf/app.ini
+++ b/conf/app.ini
@@ -2,9 +2,10 @@
 RUN_MODE = debug
 
 [app]
+JWT_SECRET = 23347$040412
 
 [server]
-HTTP_PORT = 9090
+HTTP_PORT = 8080
 READ_TIMEOUT = 60
 WRITE_TIMEOUT = 60
 
